--- a/capa.tex
+++ b/capa.tex
@@ -5,8 +5,7 @@
 	\vfill
 	
 	\large Atividade Prática Supervisionada\\
-	\textbf{\MakeUppercase{DESENVOLVIMENTO DE UM SISTEMA PARA}}\\
-	\textbf{\MakeUppercase{RECONHECIMENTO DE ESCRITA A MÃO}}
+	\textbf{\MakeUppercase{Ferramenta de comunicação em rede}}
 	
 	\bigskip
 	\bigskip
