--- a/ref.bib
+++ b/ref.bib
@@ -24,3 +24,25 @@
 	journal={Universidade Federal do Rio Grande do Sul-UFRGS, dispon{\'\i}vel em http://www. inf. ufrgs. br/procpar/disc/cmp135/trabs/992/Recon/trab2. html},
 	year={1999}
 }
+
+@article{koerich2004reconhecimento,
+	title={Reconhecimento de Palavras Manuscritas usando Modelos de Markov},
+	author={Koerich, Alessandro L},
+	journal={Revista IEEE Am{\'e}rica Latina},
+	volume={2},
+	pages={132--141},
+	year={2004}
+}
+
+@article{erpen2004reconhecimento,
+	title={Reconhecimento de padroes em imagens por descritores de forma},
+	author={Erpen, Luis Renato Cruz},
+	year={2004}
+}
+
+@phdthesis{nunes2004seleccao,
+	title={Sele{\c{c}}{\~a}o de primitivas utilizando algoritmo Subida na Encosta otimizado em problemas de Reconhecimento de caracteres},
+	author={Nunes, CARLOS MAGNO},
+	year={2004},
+	school={Disserta{\c{c}}{\~a}o de Mestrado apresentada ao Programa de P{\'o}s-Gradua{\c{c}}{\~a}o da Universidade Cat{\'o}lica do Paran{\'a}}
+}
